# lexi-matic

./: Cargo.toml  README.md  test.sh
.github/workflows/: ci.yml
benches/: bench.rs
examples/: simple.rs
lexi-matic-derive/: Cargo.toml
lexi-matic-derive/src/: lib.rs
src/: lib.rs
tests/: indentation_sensitive.rs  issues.rs  layout_rules.rs  no-lifetime.rs  simple.rs
