[package]
name = "lexi-matic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lexi-matic-derive"]

[dependencies]
lexi-matic-derive = { path = "./lexi-matic-derive" }
regex-automata = { version = "0.4.4", features = ["perf", "dfa-search"], default-features = false }
