[package]
name = "lexi-matic-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
regex-automata = { version = "0.4.4", default-features = false, features = ["alloc", "dfa", "syntax", "unicode", "perf"] }
regex-syntax = "0.8.2"
syn = "2.0.48"
